--- a/clean-and-process/src/ba-et-al_clean_process.Rmd
+++ b/clean-and-process/src/ba-et-al_clean_process.Rmd
@@ -15,22 +15,32 @@ library(readr)
 library(dplyr)
 library(purrr)
 library(stringr)
+library(lubridate)
 library(data.table)
 ```
 
 ```{r}
+3661994
+load(here("clean-and-process", "src", "stops_merged_final.rds"))
+a <- stops_merged_final %>% select(time, date, hour, stop_officer_id, start_time, end_time, shift_id)
+b <- a %>% filter(is.na(stop_officer_id)) %>% arrange(shift_id)
+c <- stops_merged_final %>% filter(shift_id == "1000768")
+d <- stops_merged_final %>% distinct()
 `%.%` <- paste0
 read_path <- paste("clean-and-process", "output", sep = "/")
 
 officers <- my_read_csv(here(read_path, "cleaned_officers.csv"))
 assignments <- my_read_csv(here(read_path, "cleaned_assignments.csv"))
+stops <- my_read_csv(here(read_path, "cleaned_stops.csv"))
+
 setDT(officers)
 setDT(assignments)
+setDT(stops)
 ```
 
 ```{r}
 # merge officer characteristics
-officer_assignments<- assignments[officers[,.(officer_id,
+officer_assignments <- assignments[officers[,.(officer_id,
                                               birth_year,
                                               officer_race,
                                               officer_gender,
@@ -99,4 +109,66 @@ anti_join_officers <- anti_join(officers, assignments, by = "officer_id")
 * **Number of unique officers**: `r length(unique(officer_assignments_fltr$officer_id))`
     * Officers dropped: `r length(unique(officer_assignments$officer_id)) - length(unique(officer_assignments_fltr$officer_id))`
     * Percentage reduction: `r (length(unique(officer_assignments$officer_id)) - length(unique(officer_assignments_fltr$officer_id))) / length(unique(officer_assignments$officer_id)) * 100`%
-    
+
+## Creating Stop Outcomes
+
+```{r}
+# sort for merging
+setkey(officer_assignments_fltr, officer_id, date)
+setkey(stops, officer_id, date)
+
+# subset to stops occurring during recorded shift
+
+## step 1: match officer_id, match stop date to date of shift start
+stops.merged <- stops[officer_assignments_fltr]
+stops.merged[, month := i.month]
+stops.merged <- stops.merged[, !"i.month", with = F]
+
+## drop if not during shift (keep those shifts with no stops)
+stops.merged <-
+    stops.merged[  
+    is.na(hour) | between(hour, floor(start_time), ceiling(end_time)),]
+
+## step 2: match officer_id, deal with stops past midnight on overnight shifts
+####  Find overnight shifts, fix start and end time, increment date by one day
+assignments.nextday <- officer_assignments_fltr[end_time > 24]
+assignments.nextday[, new_start_time := 0]
+assignments.nextday[, new_end_time := end_time - 24]
+assignments.nextday[, date_next := date]
+day(assignments.nextday$date_next) <- day(assignments.nextday$date_next) + 1
+
+## Match officer_id and stop date to the new start date of the overnight shift
+setkey(assignments.nextday, officer_id, date_next)
+stops.merged.nextday <-
+    stops[assignments.nextday,
+          ,
+          on = c(officer_id = 'officer_id', date = 'date_next')]
+
+## drop if not during shift (keep those shifts with no stops)
+stops.merged.nextday <-
+    stops.merged.nextday[
+        is.na(hour) |
+            between(hour, floor(new_start_time), ceiling(new_end_time)),]
+
+## Revert back to the normal date
+drop_cols <- c("i.date", "new_end_time", "new_start_time", "i.month")
+stops.merged.nextday[, `:=`(date = i.date, month = i.month)]
+stops.merged.nextday <- stops.merged.nextday[, !drop_cols, with = F]
+
+## merge same-day stops with next-day stops on overnight shifts
+stops_merged_final <-
+    rbind(stops.merged, stops.merged.nextday) %>%
+    distinct() %>%
+    group_by(shift_id) %>%
+    filter((n() > 1 & !is.na(stop_officer_id)) | n() == 1) %>%
+    ungroup()
+```
+
+1. Right join stops and assignments using officer_id and date. I.e. keep every assignment and only stops which occurred during the start date of the shift.
+2. Keep any stops which occurred during the hours of the shift.
+    * Round the stop time to the lowest hour.
+    * Round the shift start time to the lowest hour.
+    * Round the shift end time to the highest hour.
+3. Right join stops and assignments using officer_id and date (incremented by one day). This captures stops which occurred the **following day** during an overnight shift.
+4. Keep any stops which occurred during the hours of the shift using the same logic as in step 2.
+5. Merge the data sets (stops merged by date and stops merged by the next day) by row..........................
