--- a/clean-and-process/src/risi-merge_outcomes_officer-assignments.Rmd
+++ b/clean-and-process/src/risi-merge_outcomes_officer-assignments.Rmd
@@ -102,3 +102,248 @@ force <-
 kable(GetSummaryCol(force, "civ.race"), format = "latex")
 ```
 
+## Merge process on Risi data using Ba et al. 2021 merging method
+
+For information on how the Ba et al. 2021 merging method works, see **ba-merge_outcomes_officer-assignments**.
+
+```{r}
+# Match stops to the shift assignments they occurred during
+stops_merged <- ba_merge(officer_assignments, stops, stop_officer_id)
+missing_times_stops <- stops_merged %>% find_missing(stop_officer_id)
+duplicate_stops <- stops_merged %>% find_dupes(stop_officer_id)
+pretty_print_stops <- PrettyPrint(stops_merged, stops, officer_assignments,
+                                  missing_times_stops, duplicate_stops,
+                                  "stop_officer_id")
+write_csv(stops_merged, here(path, "stops_officers_assignments_risi_max.csv"))
+
+# Match arrests to the shift assignments they occurred during
+arrests_merged <- ba_merge(officer_assignments, arrests, arrest_officer_id)
+missing_times_arrests <- arrests_merged %>% find_missing(arrest_officer_id)
+duplicate_arrests <- arrests_merged %>% find_dupes(arrest_officer_id)
+pretty_print_arrests <- PrettyPrint(arrests_merged, arrests, officer_assignments,
+                                    missing_times_arrests, duplicate_arrests,
+                                    "arrest_officer_id")
+write_csv(arrests_merged, here(path, "arrests_officers_assignments_risi_max.csv"))
+
+# Match uses of force to the shift assignments they occurred during
+force_merged <- ba_merge(officer_assignments, force, force_id)
+missing_times_force <- force_merged %>% find_missing(force_id)
+duplicate_force <- force_merged %>% find_dupes(force_id)
+pretty_print_force <- PrettyPrint(force_merged, force, officer_assignments,
+                                  missing_times_force, duplicate_force,
+                                  "force_id")
+write_csv(force_merged, here(path, "force_officers_assignments_risi_max.csv"))
+
+rm(stops_merged, arrests_merged, force_merged)
+```
+
+### Merge stops - Risi using Ba et al. 2021
+
+* **Number of resulting rows**: `r pretty_print_stops$nrow`
+* **Number of stops which occurred during a shift**: `r pretty_print_stops$nr_outcome`
+    * **Percentage of stops** (`r nrow(stops)`): `r pretty_print_stops$prcnt_outcome`%
+* **Number of shift assignments retained:** `r pretty_print_stops$nr_shift`
+    * **Percentage of shift assignments**: `r pretty_print_stops$prcnt_shift`%
+* `r pretty_print_stops$nr_missing_shifts` shift assignments matched with at least one stop **without having** a start time and an end time.
+    * This represents `r pretty_print_stops$prcnt_missing_shifts`% of all shift assignments.
+    * `r pretty_print_stops$nr_missing_outcomes` stops are affected or `r pretty_print_stops$prcnt_missing_outcomes`% of all stops.
+* There are `r pretty_print_stops$nr_dupe_outcomes` stops which match to more than one shift assignment.
+    * These **duplicate** stops represent `r pretty_print_stops$prcnt_dupe_outcomes`% of all stops (`r nrow(stops)`).
+    * `r pretty_print_stops$nr_dupe_shifts` shift assignments are affected or `r pretty_print_stops$prcnt_dupe_shifts`% of all shift assignments.
+    * In total, there are `r pretty_print_stops$nr_dupes` **duplicate stop-shift observations** representing `r pretty_print_stops$prcnt_dupes`% of all stop-shift observations.
+
+### Merge arrests - Risi using Ba et al. 2021
+
+* **Number of resulting rows**: `r pretty_print_arrests$nrow`
+* **Number of arrests which occurred during a shift**: `r pretty_print_arrests$nr_outcome`
+    * **Percentage of arrests** (`r nrow(arrests)`): `r pretty_print_arrests$prcnt_outcome`%
+* **Number of shift assignments retained:** `r pretty_print_arrests$nr_shift`
+    * **Percentage of shift assignments**: `r pretty_print_arrests$prcnt_shift`%
+* `r pretty_print_arrests$nr_missing_shifts` shift assignments matched with at least one arrest **without having** a start time and an end time.
+    * This represents `r pretty_print_arrests$prcnt_missing_shifts`% of all shift assignments.
+    * `r pretty_print_arrests$nr_missing_outcomes` arrests are affected or `r pretty_print_arrests$prcnt_missing_outcomes`% of all arrests.
+* There are `r pretty_print_arrests$nr_dupe_outcomes` arrests which match to more than one shift assignment.
+    * These **duplicate** arrests represent `r pretty_print_arrests$prcnt_dupe_outcomes`% of all arrests (`r nrow(arrests)`).
+    * `r pretty_print_arrests$nr_dupe_shifts` shift assignments are affected or `r pretty_print_arrests$prcnt_dupe_shifts`% of all shift assignments.
+    * In total, there are `r pretty_print_arrests$nr_dupes` **duplicate stop-shift observations** representing `r pretty_print_arrests$prcnt_dupes`% of all arrest-shift observations.
+
+### Merge uses of force - Risi using Ba et al. 2021
+
+* **Number of resulting rows**: `r pretty_print_force$nrow`
+* **Number of uses of force which occurred during a shift**: `r pretty_print_force$nr_outcome`
+    * **Percentage of uses of force** (`r nrow(force)`): `r pretty_print_force$prcnt_outcome`%
+* **Number of shift assignments retained:** `r pretty_print_force$nr_shift`
+    * **Percentage of shift assignments**: `r pretty_print_force$prcnt_shift`%
+* `r pretty_print_force$nr_missing_shifts` shift assignments matched with at least one use of force **without having** a start time and an end time.
+    * This represents `r pretty_print_force$prcnt_missing_shifts`% of all shift assignments.
+    * `r pretty_print_force$nr_missing_outcomes` uses of force are affected or `r pretty_print_force$prcnt_missing_outcomes`% of all uses of force.
+* There are `r pretty_print_force$nr_dupe_outcomes` uses of force which match to more than one shift assignment.
+    * These **duplicate** uses of force represent `r pretty_print_force$prcnt_dupe_outcomes`% of all uses of force (`r nrow(force)`).
+    * `r pretty_print_force$nr_dupe_shifts` shift assignments are affected or `r pretty_print_force$prcnt_dupe_shifts`% of all shift assignments.
+    * In total, there are `r pretty_print_force$nr_dupes` **duplicate stop-shift observations** representing `r pretty_print_force$prcnt_dupes`% of all force-shift observations.
+
+```{r}
+# Drop these columns as they are redundant
+stops <- stops %>% select(-date, -month)
+force <- force %>% select(-date, -month)
+
+# Arrests don't have a time associated with them. Only the hour they occurred.
+arrests <-
+    arrests %>%
+    mutate(time = as_datetime(paste0(date,
+                                     " ",
+                                     hms::hms(rep(0, nrow(arrests)),
+                                              rep(0, nrow(arrests)),
+                                              hour)))) %>%
+    select(-date, -month)
+
+# Right non-equi join stops to officer assignments
+stops_shift_assignments <-
+    stops[officer_assignments,
+          on = .(officer_id, time >= start_datetime, time <= end_datetime)] %>%
+    rename(start_datetime = time, end_datetime = time.1) %>%
+    left_join(select(stops, time, stop_officer_id), by = "stop_officer_id")
+
+# Right non-equi join arrests to officer assignments
+arrests_shift_assignments <-
+    arrests[officer_assignments,
+            on = .(officer_id, time >= start_datetime, time <= end_datetime)] %>%
+    rename(start_datetime = time, end_datetime = time.1) %>%
+    left_join(select(arrests, time, arrest_officer_id), by = "arrest_officer_id")
+
+# Right non-equi joins force to officer assignments
+force_shift_assignments <-
+    force[officer_assignments,
+          on = .(officer_id, time >= start_datetime, time <= end_datetime)] %>%
+    rename(start_datetime = time, end_datetime = time.1) %>%
+    left_join(select(force, time, force_id), by = "force_id")
+
+# Find outcomes with matched with shift assignments that have a missing start and end time
+# In theory there should be 0
+missing_stops_risi <- stops_shift_assignments %>% find_missing(stop_officer_id)
+missing_arrests_risi <- arrests_shift_assignments %>% find_missing(arrest_officer_id)
+missing_force_risi <- force_shift_assignments %>% find_missing(force_id)
+
+# Find outcomes which matched with multiple shifts
+duplicate_stops_risi <- stops_shift_assignments %>% find_dupes(stop_officer_id)
+duplicate_arrests_risi <- arrests_shift_assignments %>% find_dupes(arrest_officer_id)
+duplicate_force_risi <- force_shift_assignments %>% find_dupes(force_id)
+
+# Pretty print the results
+ppsjr <-
+    PrettyPrint(stops_shift_assignments, stops, officer_assignments,
+                missing_stops_risi, duplicate_stops_risi, "stop_officer_id")
+ppajr <-
+    PrettyPrint(arrests_shift_assignments, arrests, officer_assignments,
+                missing_arrests_risi, duplicate_arrests_risi, "arrest_officer_id")
+ppfjr <-
+    PrettyPrint(force_shift_assignments, force, officer_assignments,
+                missing_force_risi, duplicate_force_risi, "force_id")
+
+# Remove duplicates
+stops_shift_assignments <-
+    stops_shift_assignments %>%
+    group_by(stop_officer_id) %>%
+    filter(is.na(stop_officer_id) | n() <= 1) %>%
+    ungroup()
+
+arrests_shift_assignments <-
+    arrests_shift_assignments %>%
+    group_by(arrest_officer_id) %>%
+    filter(is.na(arrest_officer_id) | n() <= 1) %>%
+    ungroup()
+
+force_shift_assignments <-
+    force_shift_assignments %>%
+    group_by(force_id) %>%
+    filter(is.na(force_id) | n() <= 1) %>%
+    ungroup()
+
+# Write out results
+write_csv(stops_shift_assignments,
+          here(path, "stops_officers_assignments_risi_min.csv"))
+
+write_csv(arrests_shift_assignments,
+          here(path, "arrests_officers_assignments_risi_min.csv"))
+
+write_csv(force_shift_assignments,
+          here(path, "force_officers_assignments_risi_min.csv"))
+```
+
+## Merge process - Risi
+
+For notes on the differences between the Risi merging process and the Ba et al. 2021 merging process, see **ba-merge_outcomes_officer-assignments**. 
+
+### Merge stops - Risi
+
+* **Number of resulting rows**: `r ppsjr$nrow`
+* **Number of stops which occurred during a shift**: `r ppsjr$nr_outcome`
+    * **Percentage of stops** (`r nrow(stops)`): `r ppsjr$prcnt_outcome`%
+    * **Number of fewer stops matched than Ba et al. 2021**: `r pretty_print_stops$nr_outcome - ppsjr$nr_outcome`
+    * **Percent reduction from Ba et al. 2021**: `r (pretty_print_stops$nr_outcome - ppsjr$nr_outcome) / pretty_print_stops$nr_outcome * 100`%
+* **Number of shift assignments retained:** `r ppsjr$nr_shift`
+    * **Percentage of shift assignments**: `r ppsjr$prcnt_shift`% **NOTE** this should be 100%.
+* `r ppsjr$nr_missing_shifts` shift assignments matched with at least one stop **without having** a start time and an end time. **NOTE** that this should be 0.
+* There are `r ppsjr$nr_dupe_outcomes` stops which match to more than one shift assignment.
+    * These **duplicate** stops represent `r ppsjr$prcnt_dupe_outcomes`% of all stops (`r nrow(stops)`).
+    * `r ppsjr$nr_dupe_shifts` shift assignments are affected or `r ppsjr$prcnt_dupe_shifts`% of all shift assignments.
+    * In total, there are `r ppsjr$nr_dupes` **duplicate stop-shift observations** representing `r ppsjr$prcnt_dupes`% of all stop-shift observations.
+    * As noted above, **all these entries are dropped**.
+
+### Merge arrests - Risi
+
+* **Number of resulting arrests**: `r ppajr$nrow`
+* **Number of arrests which occurred during a shift**: `r ppajr$nr_outcome`
+    * **Percentage of arrests** (`r nrow(arrests)`): `r ppajr$prcnt_outcome`%
+    * **Number of fewer arrests matched than Ba et al. 2021**: `r pretty_print_arrests$nr_outcome - ppajr$nr_outcome`
+    * **Percent reduction from Ba et al. 2021**: `r (pretty_print_arrests$nr_outcome - ppajr$nr_outcome) / pretty_print_arrests$nr_outcome * 100`%
+* **Number of shift assignments retained:** `r ppajr$nr_shift`
+    * **Percentage of shift assignments**: `r ppajr$prcnt_shift`% **NOTE** this should be 100%.
+* `r ppajr$nr_missing_shifts` shift assignments matched with at least one arrest **without having** a start time and an end time. **NOTE** that this should be 0.
+* There are `r ppajr$nr_dupe_outcomes` arrests which match to more than one shift assignment.
+    * These **duplicate** arrests represent `r ppajr$prcnt_dupe_outcomes`% of all arrests (`r nrow(arrests)`).
+    * `r ppajr$nr_dupe_shifts` shift assignments are affected or `r ppajr$prcnt_dupe_shifts`% of all shift assignments.
+    * In total, there are `r ppajr$nr_dupes` **duplicate arrest-shift observations** representing `r ppajr$prcnt_dupes`% of all arrest-shift observations.
+    * As noted above, **all these entries are dropped**.
+
+### Merge force - Risi
+
+* **Number of resulting rows**: `r ppfjr$nrow`
+* **Number of uses of force which occurred during a shift**: `r ppfjr$nr_outcome`
+    * **Percentage of uses of force** (`r nrow(force)`): `r ppfjr$prcnt_outcome`%
+    * **Number of fewer uses of force matched than Ba et al. 2021**: `r pretty_print_force$nr_outcome - ppfjr$nr_outcome`
+    * **Percent reduction from Ba et al. 2021**: `r (pretty_print_force$nr_outcome - ppfjr$nr_outcome) / pretty_print_force$nr_outcome * 100`%
+* **Number of shift assignments retained:** `r ppfjr$nr_shift`
+    * **Percentage of shift assignments**: `r ppfjr$prcnt_shift`% **NOTE** this should be 100%.
+* `r ppfjr$nr_missing_shifts` shift assignments matched with at least one use of force **without having** a start time and an end time. **NOTE** that this should be 0.
+* There are `r ppfjr$nr_dupe_outcomes` uses of force which match to more than one shift assignment.
+    * These **duplicate** uses of force represent `r ppfjr$prcnt_dupe_outcomes`% of all uses of force (`r nrow(force)`).
+    * `r ppfjr$nr_dupe_shifts` shift assignments are affected or `r ppfjr$prcnt_dupe_shifts`% of all shift assignments.
+    * In total, there are `r ppfjr$nr_dupes` **duplicate force-shift observations** representing `r ppfjr$prcnt_dupes`% of all force-shift observations.
+    * As noted above, **all these entries are dropped**.
+
+## Off-Duty Outcomes
+
+Given how similar the results are from my merging process vs. Ba et al. 2021, I just use my merging process to determine which stops are off-duty.
+
+```{r}
+stops <-
+    stops %>%
+    mutate(risi_offduty =
+               if_else(stop_officer_id %in% stops_shift_assignments$stop_officer_id,
+                       0,
+                       1))
+
+arrests <-
+    arrests %>%
+    mutate(risi_offduty =
+               if_else(arrest_officer_id %in% arrests_shift_assignments$arrest_officer_id,
+                       0,
+                       1))
+
+force <-
+    force %>%
+    mutate(risi_offduty =
+               if_else(force_id %in% force_shift_assignments$force_id, 0, 1))
+```
+
